# synapse

./: .env.example  .gitignore  Makefile  README.md  STATE.md  docker-compose.yml
api/: .gitignore  README.md  manage.py  pyproject.toml
api/apps/accounts/: admin.py  api.py  auth.py  managers.py  models.py
api/apps/accounts/migrations/: 0001_initial.py  0002_user_user_email_lower_uniq.py
api/apps/accounts/tests/: test_auth.py
api/apps/decks/: api.py  apps.py  cards_api.py  models.py  schemas.py
api/apps/decks/migrations/: 0001_initial.py  0002_card_card_state_valid_and_more.py  0003_card_deleted_at_deck_deleted_at_and_more.py  0004_add_card_user_sync_cursor.py  0005_card_last_client_ts_card_last_event_id_and_more.py
api/apps/decks/tests/: test_api.py  test_cards_api.py
api/apps/reviews/: api.py  models.py  schemas.py  sm2.py
api/apps/reviews/migrations/: 0001_initial.py  0002_review_review_rating_valid_and_more.py
api/apps/reviews/tests/: test_api.py  test_sm2.py
api/apps/sync/: api.py  apps.py  lww.py  models.py  schemas.py
api/apps/sync/migrations/: 0001_initial.py  0002_syncevent_syncevent_op_valid_and_more.py  0003_remove_syncevent_syncevent_op_valid_and_more.py
api/apps/sync/tests/: test_pull.py  test_push.py
api/synapse/: asgi.py  urls.py  wsgi.py
api/synapse/settings/: base.py  dev.py  prod.py  test.py
api/tests/: test_deck_card_models.py  test_review_model.py  test_syncevent_model.py  test_user_model.py
docs/: PRD.md  TECH_SPECS.md
mobile/: README.md  pubspec.yaml
web/: README.md  package-lock.json  package.json
(+41 files in other folders)
